[gd_scene load_steps=15 format=3 uid="uid://bbwllewpf8iij"]

[ext_resource type="Script" path="res://BasicEnemy.gd" id="1_dl3ft"]
[ext_resource type="PackedScene" uid="uid://cg74nekfwtrox" path="res://select_area.tscn" id="2_o6mmk"]
[ext_resource type="Shader" path="res://selectcircle.gdshader" id="2_u0fn3"]
[ext_resource type="Texture2D" uid="uid://ci8ldekevcoo6" path="res://Icon9.png" id="4_4r5t7"]
[ext_resource type="Texture2D" uid="uid://cq7471gmgrhc4" path="res://icon.svg" id="4_khkpk"]
[ext_resource type="Texture2D" uid="uid://c6t72bi4oxml6" path="res://Art/StyleIcons/melee_def_icon.png" id="6_dwdcj"]
[ext_resource type="Texture2D" uid="uid://t1ib3ub2y2am" path="res://Art/StyleIcons/ranged_def_icon.png" id="7_soegi"]
[ext_resource type="Texture2D" uid="uid://d2se44jkd5fm2" path="res://Art/StyleIcons/magic_defense_icon.png" id="8_c4qec"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_435qr"]
shader = ExtResource("2_u0fn3")
shader_parameter/ring_radius = 0.4
shader_parameter/thickness_scalar = 0.7
shader_parameter/oscillation_scalar = 0.025
shader_parameter/speed = 1.0
shader_parameter/main_color = Color(1, 1, 1, 1)
shader_parameter/lerp_color = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_vdp3o"]
radius = 48.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_172di"]
shader = ExtResource("2_u0fn3")
shader_parameter/ring_radius = 0.29
shader_parameter/thickness_scalar = 0.2
shader_parameter/oscillation_scalar = 0.0
shader_parameter/speed = 1.0
shader_parameter/main_color = Color(1, 1, 1, 1)
shader_parameter/lerp_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1lelj"]
resource_local_to_scene = true
shader = ExtResource("2_u0fn3")
shader_parameter/ring_radius = 0.29
shader_parameter/thickness_scalar = 0.15
shader_parameter/oscillation_scalar = 0.025
shader_parameter/speed = 1.0
shader_parameter/main_color = Color(0.380392, 0.0313726, 0.121569, 1)
shader_parameter/lerp_color = Color(0.601616, 0.176307, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vagt0"]
bg_color = Color(1, 0.328057, 0.384118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_at1r7"]
bg_color = Color(0, 0.716548, 0.391859, 1)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_dl3ft")

[node name="Hover" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_435qr")

[node name="SelectArea" parent="." instance=ExtResource("2_o6mmk")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectArea"]
shape = SubResource("CircleShape2D_vdp3o")

[node name="hovered" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_172di")
position = Vector2(-3.8147e-06, -5.72205e-06)
scale = Vector2(1.45313, 1.45313)
texture = ExtResource("4_khkpk")

[node name="selected" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_1lelj")
position = Vector2(-3.8147e-06, -5.72205e-06)
scale = Vector2(1.45313, 1.45313)
texture = ExtResource("4_khkpk")

[node name="UnitSprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("4_4r5t7")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -64.0
offset_top = 56.0
offset_right = 64.0
offset_bottom = 83.0
theme_override_styles/background = SubResource("StyleBoxFlat_vagt0")
theme_override_styles/fill = SubResource("StyleBoxFlat_at1r7")
value = 33.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CurHealth" type="Label" parent="HealthBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "100"
horizontal_alignment = 2

[node name="Divider" type="Label" parent="HealthBar/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="MaxHealth" type="Label" parent="HealthBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "100"

[node name="AttackTimerBar" type="ProgressBar" parent="."]
offset_left = -40.0
offset_top = -80.0
offset_right = 48.0
offset_bottom = -53.0
value = 33.0

[node name="PanelContainer" type="PanelContainer" parent="AttackTimerBar"]
layout_mode = 0
offset_left = 24.0
offset_top = -32.0
offset_right = 56.0

[node name="Attack_Style_Icon" type="TextureRect" parent="AttackTimerBar/PanelContainer"]
layout_mode = 2
texture = ExtResource("4_khkpk")
expand_mode = 1

[node name="AttackTimer" type="Timer" parent="."]

[node name="DefStyle" type="PanelContainer" parent="."]
offset_left = 40.0
offset_top = -16.0
offset_right = 72.0
offset_bottom = 16.0

[node name="Defense_Style_icon" type="TextureRect" parent="DefStyle"]
layout_mode = 2
texture = ExtResource("4_khkpk")
expand_mode = 1

[node name="StatsDisplay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -64.0
offset_top = 88.0
offset_right = 64.0
offset_bottom = 120.0

[node name="HBoxContainer" type="HBoxContainer" parent="StatsDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 18.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.88867, 0.880631)

[node name="MeleeDef" type="HBoxContainer" parent="StatsDisplay/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="StatsDisplay/HBoxContainer/MeleeDef"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("6_dwdcj")
expand_mode = 1

[node name="Melee_Def_labal" type="Label" parent="StatsDisplay/HBoxContainer/MeleeDef"]
layout_mode = 2
text = "0"

[node name="RangedDef" type="HBoxContainer" parent="StatsDisplay/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="StatsDisplay/HBoxContainer/RangedDef"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("7_soegi")
expand_mode = 1

[node name="Range_Def_labal" type="Label" parent="StatsDisplay/HBoxContainer/RangedDef"]
layout_mode = 2
text = "0"

[node name="MagicDef" type="HBoxContainer" parent="StatsDisplay/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="StatsDisplay/HBoxContainer/MagicDef"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("8_c4qec")
expand_mode = 1

[node name="Magic_Def_label" type="Label" parent="StatsDisplay/HBoxContainer/MagicDef"]
layout_mode = 2
text = "0"

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
